--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cosmos-messages",
   "version": "1.0.1",
-  "description": "This is a package that provides famous phrases randomly, to motivate our day as developers",
+  "description": "This is a package that provides famous quotes randomly, to motivate our day as developers",
   "main": "src/index.js",
   "author": "@cosmosoftroot <cosmosoft.soluciones@gmail.com>",
   "license": "MIT",
